# tgui

./: Cargo.toml  README.md  build.rs  build.zsh
dev/: ffi.c
examples/: activity.rs  buffer.rs  button.rs  dev.rs  event.rs  ffi.rs  hwbuffer.rs  img.rs  pip_act.rs  progress_bar.rs  surface.rs  text.rs  widget.rs
src/: activity.rs  any.rs  config.rs  connection.rs  event.rs  ffi.rs  impls.rs  lib.rs  main.rs  res.rs  task.rs  tgui.proto0  toolkit.rs  utils.rs  view.rs  widget.rs
src/ffi/: android.rs
src/layout/: frame.rs  grid.rs  linear.rs
src/remote/: layout.rs
src/toolkit/: button.rs  progress_bar.rs  space.rs
src/view/: activity.rs  buffer.rs  button.rs  hwbuffer.rs  img.rs  impls.rs  layout.rs  space.rs  surface.rs  text.rs  views.rs  widget.rs
src/view/layout/: frame.rs  grid.rs  linear.rs
tests/: ffi.c
